PP-11232 Add resource to redact historical data
- Added a resource endpoint to redact historical data
